5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1865_1639.log
== TEST (2019-07-04 10:06:32) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
v0 = (q, dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = v[x]
		a = a + 1
-- ERROR:
File "XXXX", line 7
    v0 = (q, dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:07:10) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
#v0 = (q, dtype=int)
#a = 0
#n = size(v)
#for x in range(n):
#	if v[x]%2 == 0:
#		v0[a] = v[x]
#		a = a + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:07:38) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = (q, dtype=int)
#a = 0
#n = size(v)
#for x in range(n):
#	if v[x]%2 == 0:
#		v0[a] = v[x]
#		a = a + 1
-- ERROR:
File "XXXX", line 8
    v0 = (q, dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:07:44) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = (q, dtype=int)
#a = 0
#n = size(v)
#for x in range(n):
#	if v[x]%2 == 0:
#		v0[a] = v[x]
#		a = a + 1
-- ERROR:
File "XXXX", line 8
    v0 = (q, dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:07:54) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = (4, dtype=int)
#a = 0
#n = size(v)
#for x in range(n):
#	if v[x]%2 == 0:
#		v0[a] = v[x]
#		a = a + 1
-- ERROR:
File "XXXX", line 8
    v0 = (4, dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:05) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = zeros(q,dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = v[x]
		a = a + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:14) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = zeros(q,dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = v[x]
		a = a + 1
print(v0
-- ERROR:
File "XXXX", line 16
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:16) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = zeros(q,dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = v[x]
		a = a + 1
print(v0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:38) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = zeros(q,dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = a
		a = a + 1
print(v0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:10:08) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = zeros(q,dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = a
		a = a + 1
print(v0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:10:27) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = zeros(q,dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = a
		print(a
		a = a + 1
print(v0)
-- ERROR:
File "XXXX", line 15
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:10:32) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = zeros(q,dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = a
		print(a)
		a = a + 1
print(v0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:11:31) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = zeros(q,dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = a
		a = a + 1
	print(x)
print(v0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:12:07) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = zeros(q,dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = x
		a = a + 1
print(v0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:12:27) 
-- CODE:
from numpy import*
v = array(eval(input("turmas: ")))
q = 0
for x in v:
	if x%2 == 0:
		q = q + 1
print(q)
v0 = zeros(q,dtype=int)
a = 0
n = size(v)
for x in range(n):
	if v[x]%2 == 0:
		v0[a] = x
		a = a + 1
print(v0)
-- EXECUTION TIME:
1.13618
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
6
[ 0  1  6  8 11 12]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
5
[0 1 4 7 8]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
6
[0 1 4 6 7 8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
